--- a/bonobo/src/AppBundle/Resources/views/default/index.html.twig
+++ b/bonobo/src/AppBundle/Resources/views/default/index.html.twig
@@ -1,6 +1,17 @@
 {% extends '::base.html.twig' %}
 {% block body %}
-
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav pull-right">
+            <li>
+                <a href="{{ path('fos_user_security_login') }}">Connexion</a>
+            </li>
+            <li>
+                <a href="{{ path('fos_user_registration_register') }}">Inscription</a>
+            </li>
+        </ul>
+    </div>
+    <!-- /.navbar-collapse -->
     <img class="center-block" src="{{ asset('bonobo.png') }}" />
 
 {% endblock %}
